# Astra

./: README.md  build.py  example.py  pyproject.toml  setup.py  test_astra.py
astra/: __init__.py  main.py
astra/core/: v0.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py  v7.py  v8.py  v9.py
astra/core/ops/: README.md  gelu.cu  gelu.py  gelu_binding.cpp
